Task 017: Translated all new features in develop

--- a/src/main/resources/messages/messages_es.properties
+++ b/src/main/resources/messages/messages_es.properties
@@ -1,4 +1,4 @@
-welcome=Bienvenido/a al proyecto PSG2-2021-G2-25 Petclinic
+welcome=Bienvenido a PSG2-2021-G2-25 Petclinic
 required=es requerido/a
 notFound=no ha sido encontrado/a
 duplicate=está ya en uso
