Commit 18/05/21: #088 Request resolved.

--- a/src/main/resources/messages/messages_es.properties
+++ b/src/main/resources/messages/messages_es.properties
@@ -1,4 +1,5 @@
 welcome=Bienvenido a PSG2-2021-G2-25 Petclinic
+description=La app parte de la plantilla Petclinic proporcionada por la asignatura de PSG2 y consiste en un cambio de la plantilla, para incluir una serie de funcionalidades a lo largo de los diferentes Sprints (funcionalidades de donaciones, vetenerinarios,...)  
 required=es requerido/a
 notFound=no ha sido encontrado/a
 duplicate=está ya en uso
